<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2017 Elliot Tormey
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llStepOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <ie.elliot.trvl.ui.view.AirportView
            android:id="@+id/avArrive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hint="@string/where_to" />

        <ie.elliot.trvl.ui.view.AirportView
            android:id="@+id/avDepart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hint="@string/depart_from" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llStepTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_way"
                android:textAllCaps="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/round_trip"
                android:textAllCaps="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_background"
            android:gravity="center"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/flying_out_on"
                android:textAllCaps="true"
                android:textColor="?android:attr/textColorSecondary" />

            <android.support.v4.widget.Space style="@style/Space.Horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                tools:text="Friday, 12\nNovember" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <!-- Passenger count START-->
            <TextView
                android:id="@+id/tvPassengers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/passengers"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:id="@+id/tvPassengerCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvPassengers"
                android:padding="4dp"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/tvClassTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/airline_class"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:id="@+id/tvClass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/tvClassTitle"
                tools:text="Economy" />

        </RelativeLayout>

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_flights" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvFlightsResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</LinearLayout>