<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2017 Elliot Tormey
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <ie.elliot.trvl.ui.view.AirportView
        android:id="@+id/avDepart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ie.elliot.trvl.ui.view.AirportView
        android:id="@+id/avOrigin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_way"
            android:textAllCaps="true"
            android:textColor="?android:attr/textColorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/round_trip"
            android:textAllCaps="true"
            android:textColor="?android:attr/textColorPrimary" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_background"
        android:gravity="center"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/flying_out_on"
            android:textAllCaps="true"
            android:textColor="?android:attr/textColorSecondary" />

        <android.support.v4.widget.Space style="@style/Space.Horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="?android:attr/textColorPrimary"
            tools:text="Friday, 12\nNovember" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <!-- Passenger count START-->
        <TextView
            android:id="@+id/tvPassengers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/passengers"
            android:textColor="?android:attr/textColorSecondary" />

        <TextView
            android:id="@+id/tvPassengerCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tvPassengers"
            android:padding="4dp"
            android:text="@string/zero"
            android:textColor="?android:attr/textColorPrimary" />

        <TextView
            android:id="@+id/tvPassengerIncrement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPassengers"
            android:layout_toEndOf="@+id/tvPassengerCount"
            android:paddingBottom="4dp"
            android:paddingEnd="4dp"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:text="@string/plus_sign"
            android:textColor="?android:attr/textColorPrimary" />

        <TextView
            android:id="@+id/tvPassengerDecrement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPassengers"
            android:layout_toEndOf="@+id/tvPassengerIncrement"
            android:paddingBottom="4dp"
            android:paddingEnd="8dp"
            android:paddingStart="4dp"
            android:paddingTop="4dp"
            android:text="@string/minus_sign"
            android:textColor="?android:attr/textColorPrimary" />
        <!-- Passenger count END-->

        <TextView
            android:id="@+id/tvClassTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/airline_class"
            android:textColor="?android:attr/textColorSecondary" />

        <TextView
            android:id="@+id/tvClass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvClassTitle"
            android:layout_centerHorizontal="true"
            android:textColor="?android:attr/textColorPrimary"
            tools:text="Economy" />

        <!-- Number of stops START-->
        <TextView
            android:id="@+id/tvStops"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/stops"
            android:textColor="?android:attr/textColorSecondary" />

        <TextView
            android:id="@+id/tvStopCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvStops"
            android:layout_toStartOf="@+id/tvStopIncrement"
            android:padding="4dp"
            android:text="@string/zero"
            android:textColor="?android:attr/textColorPrimary" />

        <TextView
            android:id="@+id/tvStopIncrement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvStops"
            android:layout_toStartOf="@+id/tvStopDecrement"
            android:paddingBottom="4dp"
            android:paddingEnd="4dp"
            android:paddingStart="8dp"
            android:paddingTop="4dp"
            android:text="@string/plus_sign"
            android:textColor="?android:attr/textColorPrimary" />

        <TextView
            android:id="@+id/tvStopDecrement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/tvStops"
            android:paddingBottom="4dp"
            android:paddingEnd="8dp"
            android:paddingStart="4dp"
            android:paddingTop="4dp"
            android:text="@string/minus_sign"
            android:textColor="?android:attr/textColorPrimary" />
        <!-- Number of stops END-->

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/departure_time"
        android:textColor="?android:attr/textColorSecondary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp">

        <View
            android:id="@+id/morning"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@android:color/white" />

        <android.support.v4.widget.Space style="@style/Space.Horizontal" />

        <View
            android:id="@+id/noon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@android:color/white" />

        <android.support.v4.widget.Space style="@style/Space.Horizontal" />

        <View
            android:id="@+id/evening"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@android:color/white" />

        <android.support.v4.widget.Space style="@style/Space.Horizontal" />

        <View
            android:id="@+id/night"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@android:color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search" />

</LinearLayout>